[gd_scene load_steps=10 format=3 uid="uid://cytjmcme4xp84"]

[ext_resource type="Script" path="res://scripts/fish.gd" id="1_1dpl7"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_baii4"]
friction = 0.7
bounce = 0.6

[sub_resource type="CircleShape2D" id="CircleShape2D_xajux"]
radius = 115.0

[sub_resource type="Animation" id="Animation_t1ogx"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(4, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(4, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_lrnpx"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(4, -0.25, 0, 0.25, 0, 3.5, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(3.7, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 3.7, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_786x0"]
resource_name = "idle_slow"
length = 1.6
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(4, -0.25, 0, 0.25, 0, 3.5, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8, 1.6)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(3.6, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 3.6, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8, 1.6)
}

[sub_resource type="Animation" id="Animation_m1a74"]
resource_name = "idle_slower"
length = 1.2
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(4, -0.25, 0, 0.25, 0, 3.5, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6, 1.2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(3.7, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 3.7, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6, 1.2)
}

[sub_resource type="Animation" id="Animation_43rwb"]
resource_name = "idle_fast"
length = 0.8
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(4, -0.25, 0, 0.25, 0, 3.5, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.8)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(3.7, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 3.7, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 0.8)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_opmwo"]
_data = {
"RESET": SubResource("Animation_t1ogx"),
"idle": SubResource("Animation_lrnpx"),
"idle_fast": SubResource("Animation_43rwb"),
"idle_slow": SubResource("Animation_786x0"),
"idle_slower": SubResource("Animation_m1a74")
}

[node name="Fish" type="RigidBody2D"]
input_pickable = true
mass = 15.51
physics_material_override = SubResource("PhysicsMaterial_baii4")
lock_rotation = true
max_contacts_reported = 5
contact_monitor = true
linear_damp = 1.0
script = ExtResource("1_1dpl7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_xajux")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_opmwo")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
